--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,3 +5,11 @@
     padding: 0;
     border: none;
 }
+
+body {
+    font-family: Work sans, sans-serif;
+}
+
+h1, h2 {
+    font-family: Merriweather, sans-serif;
+}
