--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,3 +49,16 @@ h1, h2 {
     padding: 10px;
     border: 1px solid black;
 }
+
+#hero-container {
+    height: 600px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+#hero-image {
+    height: 600px;
+    width: 100%;
+    background: url('../images/hero-image.jpg') no-repeat center center;
+}
