--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ h1, h2 {
 #menu li {
     float: right;
     list-style-type: none;
-    padding: 10px;
+    padding: 25px 10px;
     margin-right: 20px;
 }
 
