--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,3 +166,15 @@ h1, h2 {
     padding: 10px;
     border: 1px solid #fff;
 }
+
+#contact {
+    height: 300px;
+    background: url('../images/footer-background.webp') no-repeat center center;
+    text-align: center;
+}
+
+#contact-info {
+    background-color: rgba(255, 255, 255, 0.6);
+    height: 300px;
+    width: 100%;
+}
