--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,12 +169,14 @@ h1, h2 {
 
 #contact {
     height: 300px;
-    background: url('../images/footer-background.webp') no-repeat center center;
+    background: url('../images/footer-img.webp') no-repeat center center;
     text-align: center;
 }
 
 #contact-info {
-    background-color: rgba(255, 255, 255, 0.6);
-    height: 300px;
+    background-color: rgba(70, 70, 70, 0.7);
+    height: 250px;
     width: 100%;
+    padding-top: 50px;
+    color: #fff;
 }
