--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,8 +175,16 @@ h1, h2 {
 
 #contact-info {
     background-color: rgba(70, 70, 70, 0.7);
-    height: 250px;
+    height: 300px;
     width: 100%;
-    padding-top: 50px;
     color: #fff;
+}
+
+#contact-info h2 {
+    font-size: 250%;
+    padding: 20px;
+}
+
+#contact-info p {
+    font-size: 130%;
 }
