--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,6 +169,10 @@ h1, h2 {
 
 #form-img {
     background: url('../images/form-background.webp') no-repeat center center;
+    width: 100%;
+    height: 600px;
+
+    position: relative
 }
 
 form {
@@ -176,7 +180,14 @@ form {
     padding: 20px;
     text-align: center;
     color: rgb(70, 70, 70);
-    font-size: 130%;
+    font-size: 150%;
+
+    height: 500px;
+    width: 800px;
+
+    position: absolute;
+    top: 30px;
+    left: 300px;
 }
 
 form h2 {
