--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,8 @@ body {
     color: rgb(70, 70, 70);
 }
 
+/*headings and logo*/
+
 h1, h2 {
     font-family: Merriweather, sans-serif;
 }
@@ -21,6 +23,8 @@ h1, h2 {
     float: left;
     margin: 20px;
 }
+
+/*Header and nav*/
 
 #menu {
     letter-spacing: 3px;
@@ -49,6 +53,8 @@ h1, h2 {
     padding: 10px;
     border: 1px solid black;
 }
+
+/*hero-image and cover-text*/
 
 #hero-container {
     height: 600px;
@@ -80,6 +86,8 @@ h1, h2 {
 #cover-text h2, #cover-text {
     color: #fff;
 }
+
+/*why us*/
 
 #why-us {
     height: 600px;
@@ -129,6 +137,8 @@ h1, h2 {
     border-radius: 5%;
 }
 
+/*how-it-works*/
+
 #how-it-works-heading {
     text-align: center;
     font-size: 250%;
@@ -166,6 +176,8 @@ h1, h2 {
     padding: 10px;
     border: 1px solid #fff;
 }
+
+/*signup-form and form-img*/
 
 #form-img {
     background: url('../images/form-background.webp') no-repeat center center;
@@ -207,6 +219,8 @@ form h2 {
     background-color: #fff;
     color: rgb(70, 70, 70);
 }
+
+/*contact*/
 
 #contact {
     height: 300px;
