--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -270,8 +270,25 @@ form h2 {
         margin-right: 5px;
         font-size: 80%;
         padding: 25px 5px;
-
-
-
     }
 
+    #why-us {
+        height: 1200px;
+        width: 70%;
+        margin: 0 auto;
+    }
+
+    #left-why, #right-why {
+        width: 100%;
+        float: left;
+        margin-top: 30px;
+    }
+
+    #center-why {
+        clear: both;
+        padding: 0;
+        margin-left: 17%;
+    }
+
+    
+}
